--- a/public/profile.html
+++ b/public/profile.html
@@ -119,9 +119,9 @@
         <section class="profile-details">
             <h2>Profile Information</h2>
             <div class="profile-card">
-                <p><strong>Name:</strong> John Doe</p>
-                <p><strong>Email:</strong> john.doe@example.com</p>
-                <p><strong>Phone:</strong> +1 234 567 890</p>
+                <p><strong>Name:</strong> Karan Kumar</p>
+                <p><strong>Email:</strong> karankumar@example.com</p>
+                <p><strong>Phone:</strong> +91 234 567 890</p>
                 <p><strong>Date of Birth:</strong> Jan 1, 2000</p>
                 <p><strong>Enrolled Courses:</strong> Computer Science, Mathematics</p>
                 <p><strong>Semester:</strong> 6</p>
