--- a/public/profile.html
+++ b/public/profile.html
@@ -103,6 +103,7 @@
             <li><a href="exams.html">Exams</a></li>
             <li><a href="reminders.html">Reminders</a></li>
             <li><a href="profile.html" class="active">Profile</a></li>
+            <li><a href="timetable.html" >Class Timetable</a></li>
             <li><a href="Logout.html" onclick="logout()">Logout</a></li>
         </ul>
     </div>
