--- a/public/reminders.html
+++ b/public/reminders.html
@@ -93,6 +93,7 @@ header {
             <li><a href="exams.html">Exams</a></li>
             <li><a href="reminders.html" class="active">Reminders</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="timetable.html">Class Timetable</a></li>
             <li><a href="Logout.html" onclick="logout()">Logout</a></li>
         </ul>
     </div>
