--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -127,6 +127,7 @@
             <li><a href="exams.html">Exams</a></li>
             <li><a href="reminders.html">Reminders</a></li>
             <li><a href="profile.html">Profile</a></li>
+            <li><a href="timetable.html" >Class Timetable</a></li>
             <li><a href="Logout.html" onclick="logout()">Logout</a></li>
         </ul>
     </div>
